# GOAT

./: .gitignore  CHANGELOG.md  CHANGELOG.md.orig  CHANGELOG.md.rej  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PHASE_9_1_COMPLETED.md  README.md  README.md.orig  README.md.rej  SECURITY.md  SUPPORT.md  check.err  check2.err  check3.err  expand.rs  fix_enum.py  fix_match.py  goat_brain.db  goat_brain.db-shm  goat_brain.db-wal  patch2.rs  patch_api.py  patch_app.py  patch_app2.py  patch_cli_mission.py  patch_config.py  patch_headless.py  patch_mission_ui.py  patch_parse.py  patch_registry.py  patch_skills.py  patch_skills_ui.py  prompt.txt  scratch.patch  scratch.rs  scratch_patch.rs  setup_phase_5_14.sh  update.patch  (+3 more)
.github/: pull_request_template.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: BUILD_FROM_SOURCE.md  DEVELOPMENT.md  GITHUB_REPO_SETUP.md  GOAT_AGENTFLOW_WORKFLOWS.md  GOAT_AGENT_ARCHITECTURE.md  GOAT_AGENT_COLLABORATION.md  GOAT_AGENT_FEATURE_RESEARCH.md  GOAT_AGENT_HANDOFFS.md  GOAT_AGENT_REFERENCE_INDEX.md  GOAT_AGENT_RUNTIME.md  GOAT_AGENT_SAFETY_AND_ETHICS.md  GOAT_AGENT_SKILL_WORKFLOW_BUILDERS.md  GOAT_AGENT_TEMPLATE_MARKETPLACE.md  GOAT_AI_STUDIO.md  GOAT_ALL_AGENT_FEATURE_INVENTORY.md  GOAT_ALPHA_BLOCKERS.md  GOAT_ALPHA_FEEDBACK.md  GOAT_ALPHA_FIRST_ISSUES.md  GOAT_ALPHA_MANUAL_QA_CHECKLIST.md  GOAT_ALPHA_QUICKSTART.md  GOAT_ALPHA_READINESS.md  GOAT_ALPHA_RELEASE_CHECKLIST.md  GOAT_ALPHA_SHIP_PLAN.md  GOAT_ALPHA_SMOKE_TEST.md  GOAT_ALPHA_USABILITY_AUDIT.md  GOAT_APPROVAL_PROFILES.md  GOAT_ARCHITECTURE.md  GOAT_ARCHITECTURE_PATTERNS.md  GOAT_AUTOMATION_RECIPE_MARKETPLACE.md  GOAT_BRAIN_INGESTION.md  GOAT_BRAIN_LEARNING_LOOP.md  GOAT_BRAIN_PRIVACY.md  GOAT_BRAIN_QUALITY_AUDIT.md  GOAT_BRAIN_SEARCH_V2.md  GOAT_BRANDING.md  GOAT_BROWSER_AUTOMATION_AUDIT.md  GOAT_BROWSER_SAFETY.md  GOAT_BROWSER_UI_QA.md  GOAT_BROWSER_WORKFLOWS.md  GOAT_BUILDER_AGENT.md  (+116 more)
logs/: goat.log.2026-06-08
scripts/: build-release.sh  install-local.sh  install.sh  package-alpha.sh  smoke-alpha.sh  smoke-test-alpha.sh  test-real-workspaces.sh  uninstall.sh
src/: agent_collaboration.rs  agent_profiles.rs  agent_quality.rs  agent_runtime.rs  app.rs  (+77 more)
(+127 files in other folders)
