[package]
name = "GOAT"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
rand = "0.10.1"
ratatui = "0.30.1"
reqwest = { version = "0.13.4", features = ["json"] }
rusqlite = "0.40.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
