[package]
name = "goat"
version = "0.8.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
rand = "0.10.1"
regex = "1.11.1"
ratatui = "0.30.1"
reqwest = { version = "0.13.4", features = ["json"] }
rusqlite = "0.40.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.2", features = ["v4", "std"] }
walkdir = "2.5.0"
chrono = { version = "0.4.45", features = ["serde"] }
which = "8.0.3"

[dev-dependencies]
tempfile = "3.8"
